fix wrap

--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,6 @@ footer {
 body {
     background-image: url('assets/prism.png');
     margin: 0px;
-
 }
 
 div {
@@ -56,6 +55,7 @@ div {
     flex-direction: row;
     justify-content: center;
     align-items: flex-start;
+    flex-wrap: wrap;
 }
 
 h1 {
@@ -98,6 +98,7 @@ nav {
     align-items: center;
     font-size: 30px;
     flex: 1;
+    flex-wrap: wrap;
 }
 
 span {
